# ros_libfacedetection

./: CMakeLists.txt  README.md  package.xml
launch/: facedetector.launch
src/: facedetector_node.cpp
